# Simple

./: .clang-format  .drone.yml  .gitignore  CMakeLists.txt  conanfile.txt
include/Simple/: Serialize.hpp  StaticMap.hpp  StopWatch.hpp  Zipper.hpp
include/Simple/HttpServer/: LoggingHelper.hpp
tests/: CMakeLists.txt  condition_buffer_test.cpp  serializer_test.cpp  signal_test.cpp  static_map_test.cpp  thread_pool_test.cpp  zipper_test.cpp
