add_executable(signal_test "signal_test.cpp")
target_link_libraries(signal_test Simple)
add_test(signal_test signal_test)

add_executable(thread_pool_test "thread_pool_test.cpp")
target_link_libraries(thread_pool_test Simple)
IF( NOT WIN32 )
target_link_libraries(thread_pool_test "-lstdc++fs")
ENDIF()
add_test(thread_pool_test thread_pool_test)

add_executable(logger_test "logger_test.cpp")
target_link_libraries(logger_test Simple)
IF( NOT WIN32 )
target_link_libraries(logger_test "-lstdc++fs")
ENDIF()
add_test(logger_test logger_test)

add_executable(condition_buffer_test "condition_buffer_test.cpp")
target_link_libraries(condition_buffer_test Simple)
IF( NOT WIN32 )
target_link_libraries(condition_buffer_test "-lstdc++fs")
ENDIF()
add_test(condition_buffer_test condition_buffer_test)

add_executable(zipper_test "zipper_test.cpp")
target_link_libraries(zipper_test Simple)
add_test(zipper_test zipper_test)

add_executable(static_map_test "static_map_test.cpp")
target_link_libraries(static_map_test Simple)
add_test(static_map_test static_map_test)

add_executable(serializer_test "serializer_test.cpp")
target_link_libraries(serializer_test Simple)
add_test(serializer_test serializer_test)
